--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Room Learning</string>
+    <string name="add_data">Add Data</string>
+    <string name="name">Name</string>
 </resources>
